[lworld] Missing barrier after value object construction

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      compiler/valhalla/inlinetypes/TestBufferTearing.java is failing with

      java.lang.RuntimeException: Inconsistent field values: expected 1756 to equal 0
      at jdk.test.lib.Asserts.fail(Asserts.java:634)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:178)
      at compiler.valhalla.inlinetypes.MyValue.incrementAndCheck(TestBufferTearing.java:103)
      at compiler.valhalla.inlinetypes.TestBufferTearing$Runner.run(TestBufferTearing.java:148)
      java.lang.RuntimeException: Inconsistent field values: expected 5806012 to equal 0
      at jdk.test.lib.Asserts.fail(Asserts.java:634)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:178)
      at compiler.valhalla.inlinetypes.MyValue.incrementAndCheck(TestBufferTearing.java:103)
      at compiler.valhalla.inlinetypes.TestBufferTearing$Runner.run(TestBufferTearing.java:147)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: