8328682: [lworld] Missing barrier after value object construction